Fixed the text alignment of the sign up container to be centered

--- a/css/login-page.css
+++ b/css/login-page.css
@@ -69,3 +69,9 @@
         }
     }
 }
+
+#sign-up {
+    p {
+        text-align: center;
+    }
+}
